# lib-across

./: CMakeLists.txt
include/: across.hpp
src/: main-test.cpp  test_acx.cpp
